[gd_scene load_steps=7 format=3 uid="uid://co2abt44iog4m"]

[ext_resource type="Script" path="res://thing.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dnfntj4yqsdo7" path="res://img/downright.png" id="2"]
[ext_resource type="Texture2D" uid="uid://cob3xktjcdw8u" path="res://img/upleft.png" id="3"]
[ext_resource type="Texture2D" uid="uid://d3nhy1buc4h1l" path="res://img/rightup.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ddcb1iwf7vwkg" path="res://img/leftdown.png" id="5"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"downright",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"leftdown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": true,
"name": &"rightup",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"upleft",
"speed": 5.0
}]

[node name="1" type="Node2D"]
script = ExtResource("1")
way = [["right", "up"]]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("1")
animation = &"downright"

[node name="touchy" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="touchy"]
polygon = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[node name="enterDir" type="Node2D" parent="."]

[node name="right" type="Marker2D" parent="enterDir"]
position = Vector2(-32, 0)

[node name="left" type="Marker2D" parent="enterDir"]
position = Vector2(32, 0)

[node name="up" type="Marker2D" parent="enterDir"]
position = Vector2(0, 32)

[node name="down" type="Marker2D" parent="enterDir"]
position = Vector2(0, -32)

[node name="exitDir" type="Node2D" parent="."]

[node name="left" type="Marker2D" parent="exitDir"]
position = Vector2(-32, 0)

[node name="right" type="Marker2D" parent="exitDir"]
position = Vector2(32, 0)

[node name="up" type="Marker2D" parent="exitDir"]
position = Vector2(0, -32)

[node name="down" type="Marker2D" parent="exitDir"]
position = Vector2(0, 32)
